--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-sass": "^9.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.5"
+    "react-id-swiper": "^4.0.0",
+    "swiper": "^8.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
